# yuilrobotics_description

./: package.xml  setup.cfg  setup.py
config/: controller_manager.md  controller_manager.yaml  controllers.md  controllers.yaml  parameter_manager.yaml
launch/: display.launch.py  gazebo.launch.py
meshes/: Link_2_1.stl  Link_6_1.stl
urdf/: materials.xacro  yuilrobotics.gazebo  yuilrobotics.trans  yuilrobotics.xacro
yuilrobotics_description/: parameter_manager.py
